# CardioVascularRisk_AssesmentModel

./: README.md  main.py  pyproject.toml
